hugo/assets/scss/base/base.scss
/* ... */
html,
body {
    font-size: 16px;
    min-height: 100%;
}

body {
    @include scrollbars;
    @include style-text;

    background-color: var(--body-background, $c-white);
    color: var(--text-color);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    @include style-heading;

    color: var(--heading-color);
    margin: 2.5rem 0 0.5rem;
}

h1 {
    @include style-heading-1;

    margin: 2.5rem 0 2rem;
}

h2 {
    @include style-heading-2;

    margin: 2.5rem 0 1rem;
}

h3 {
    @include style-heading-3;
}

h4 {
    @include style-heading-4;
}

h5,
h6 {
    @include style-heading-5;
}

p {
    font-size: inherit;
    font-style: inherit;
    margin: 0 0 1.25em;
}

strong {
    font-weight: $weight-bold;
}

small {
    @include style-text-small;
}

a {
    &:not([class]) {
        border-bottom: 1px solid currentColor;
        color: var(--text-link-color);
        cursor: pointer;
        font-weight: $weight-semibold;
        text-decoration: none;
        transition: border-bottom 0.2s ease-in;

        &:hover {
            border-bottom: 1px solid transparent;
        }
    }
}

hr {
    background-color: var(--hr-color);
    border: 0;
    clear: both;
    display: block;
    height: 1px;
    margin: 1rem 0;
    padding: 0;
}

img,
figure {
    display: block;
    width: 100%;
}

figcaption {
    @include style-text;

    color: var(--caption-color);
    font-size: 0.875rem;
    padding: 0.5rem;
}

ul,
ol {
    @include list-reset;

    &:not([class]) {
        line-height: 1.75;
        margin: 0 0 1.25rem;

        li {
            margin: 0 0 0.125rem;
            padding-left: 1.5rem;
            position: relative;

            &::before {
                color: var(--list-color);
                content: '\002022';
                font-size: 1.5rem;
                left: 4px;
                line-height: 1.125;
                position: absolute;
                top: 0;
            }

            p {
                margin: 0;

                & + p {
                    margin-top: 1rem;
                }
            }
        }

        ul,
        ol {
            margin: 0.5rem 0 0;
        }

        ul {
            li {
                &::before {
                    content: '\0025E6';
                }
            }
        }
    }
}

ol {
    &:not([class]) {
        counter-reset: ol-number;

        li {
            counter-increment: ol-number;

            &::before {
                content: counter(ol-number) '.';
                font-size: inherit;
                font-weight: $weight-bold;
                left: 3px;
                line-height: 1.75;
            }
        }
    }
}

dl {
    margin: 0 0 1.5rem;
}

dt {
    @include style-text;

    font-weight: $weight-bold;
    margin: 0.75rem 0 0;
}

dd {
    @include style-text;
}

table {
    border-collapse: collapse;
    border-radius: 0;
    margin: 0 0 1rem;
    overflow: hidden;
    text-align: left;
    width: 100%;
}

thead {
    background-color: var(--table-head-background);
}

th,
td {
    font-size: 0.875rem;
    padding: 0.5rem 1rem;
    vertical-align: top;

    p:last-of-type {
        margin-bottom: 0;
    }
}

th {
    @include style-heading;

    border-bottom: 1px solid var(--table-border-color);
    color: var(--heading-color);
    line-height: 1.75;
}

tr {
    &:nth-child(even) {
        background-color: var(--table-row-background);
        border-bottom: 1px solid var(--table-border-color);
        border-top: 1px solid var(--table-border-color);
    }
}

blockquote {
    background-color: var(--quote-background-color, $c-grey--lightest);
    border-radius: $b-radius;
    clear: both;
    color: var(--quote-color, $c-blue--darker);
    display: block;
    margin: 2rem 0;
    padding: $p-gutter;

    & > :first-child {
        margin-top: 0;
    }

    & > :last-child {
        margin-bottom: 0;
    }

    cite {
        color: var(--quote-cite-color, transparentize($c-black, 0.31));
        display: block;
        font-size: 1rem;
        font-style: normal;
        line-height: 1.5;
        margin-top: $p-gutter--large;
        position: relative;

        &::before {
            background-color: var(--quote-line-color, $c-yellow);
            content: '';
            height: 3px;
            position: absolute;
            top: -15px;
            width: 80px;
        }
    }
}

abbr {
    &[title] {
        border-bottom: 1px dotted currentColor;
        color: currentColor;
        cursor: help;
        font-weight: $weight-bold;
        text-decoration: none;
        transition: border 0.2s ease-in-out;

        &:hover {
            border-bottom: 1px solid currentColor;
        }
    }
}

mark,
ins {
    background-color: var(--mark-background-color);
    border: 0;
    color: var(--mark-color);
    text-decoration: none;
}

code,
kbd,
tt,
var,
samp,
pre {
    font-family: $font-monospace;
    font-size: 1rem;
    line-height: 1.625;
}

code {
    font-size: inherit;
    font-style: normal;
    font-weight: inherit;
    line-height: inherit;
    white-space: pre;

    ul &,
    ol &,
    dl &,
    p & {
        --pre-background-color: #{ $c-grey-blue };

        background-color: var(--pre-background-color);
        border-radius: 2px;
        padding: 0 4px;
    }
}

pre {
    background-color: var(--pre-background-color);
    border: 2px solid var(--pre-border-color);
    border-radius: $b-radius;
    color: var(--pre-color);
    font-size: 0.875rem;
    margin: 0 0 1.5rem;
    max-width: 100%;
    overflow-x: auto;
    padding: 0.875rem 1rem;
}

audio,
canvas,
iframe,
svg,
video {
    vertical-align: middle;
}

iframe {
    max-width: 100%;
}

fieldset {
    border: 0;
    margin: 0;
    min-width: 0;
    padding: 0;
}
/* ... */

